2006-11-24	Richard van den Berg  <richard@vdberg.org>
	* Remove stpcpy declaration because it is not defined in util.c
	* Fix segfault when line->cntx is NULL
	* Add --without-mhash to configure
	* Don't use DB_SELINUX and DB_XATTR when not present
	* Fix use of libgcrypt
	* Add new group 'l' to detect changed link name
	* Update documentation with new groups

2006-11-15	Richard van den Berg  <richard@vdberg.org>
	* Fix syslog URLs (Yves Mettier <ymettier@libertysurf.fr>)

2006-10-30	Richard van den Berg  <richard@vdberg.org>
	* Make --with-selinux work without pkg-config

2006-10-27	Richard van den Berg  <richard@vdberg.org>
	* Added "Add xattr support" patch from James Antill <james-aide-38mkm@and.org>
	* Added "report miscompares to Linux Audit System" patch from James Antill
	* Added "Allow building without mhash library" patch from James Antill
	* Added "correct db_names" patch from Steve Grubb <sgrubb@redhat.com>
	* Added "memory leaks and performance updates" patch from Steve Grubb
	* Added "deadcode removal" patch from Steve Grubb <sgrubb@redhat.com>
	* Added "change K&R functions to void functions" patch from Steve Grubb
	* Added "Memleak fix for ACLs, SELinux, XAttr" patch from James Antill

2006-10-10	Richard van den Berg  <richard@vdberg.org>
	* Added note about rpl_malloc on AIX 5.3 with mhash
	* Include version.m4 in distribution tar file
	* No need for absolute $(srcdir) in configure
	* Use AC_CONFIG_FILES(files..) instead of AC_OUTPUT(files..)
	* Removed redundant targets from Makefile.am

2006-10-06	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.12
	* Added file locking for output files

2006-10-05	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.12

2006-10-04	Richard van den Berg  <richard@vdberg.org>
	* Close database files earlier
	* Released version 0.12-rc2

2006-09-24	Richard van den Berg  <richard@vdberg.org>
	* Fixed filesize stored in postgres (SF bug #1177758)
