@@ -57,6 +57,10 @@ void init_sighandler(void);
 char* strnstr(char* haystack,char* needle,int n);
 #endif
 
+#ifndef HAVE_STRNLEN
+size_t strnlen(const char *s, size_t maxlen);
+#endif
+
 int syslog_facility_lookup(char *);
 
 #endif
